--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "expo-updates": "~0.15.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
