--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "dayjs": "^1.11.6",
+    "events": "^3.3.0",
     "expo": "~47.0.3",
     "expo-image-picker": "~14.0.1",
     "expo-status-bar": "~1.4.2",
+    "expo-updates": "~0.15.5",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-vector-icons": "^9.2.0",
-    "expo-updates": "~0.15.5"
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
